[package]
name = "bomboclat_chat_uknow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
data-encoding = "2.8.0"
futures-lite = "2.6.0"
iroh = "0.34.1"
iroh-gossip = "0.34.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.2"
